<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="280dp"
    android:layout_gravity="center"
    android:background="@drawable/popup_background"
    android:padding="10dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >



    <Button
        android:id="@+id/exit_sign_in"
        android:layout_width="30dp"
        android:layout_height="27dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/exit_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_login"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/user"
        android:textColorHint="@color/hint_color"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/password_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exit_sign_in">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_login"
        android:layout_width="279dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/password"
        android:textColorHint="@color/hint_color"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/remember_me_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_login">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/username_login" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/remember_me_checkbox"
        style="@style/ShadowedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/remember_me"
        android:textColor="@color/hint_color"
        android:textSize="15sp"
        android:buttonTint="@color/hint_color"
        app:layout_constraintTop_toBottomOf="@id/password_login"
        app:layout_constraintBottom_toTopOf="@+id/popup_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/popup_sign_in"
        android:layout_width="89dp"
        android:layout_height="40dp"
        android:background="@drawable/sign_in_popup"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remember_me_checkbox" />

    <ProgressBar
        android:id="@+id/sign_in_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:outlineAmbientShadowColor="@color/colorPrimary"
        android:outlineSpotShadowColor="@color/popup"
        >
        </ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>